Added external libraries and first class for passing the walking skeleton.

--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,17 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="vendor/commons-io-2.0.1.jar"/>
+	<classpathentry kind="lib" path="vendor/hamcrest-1.3.0RC2.jar"/>
+	<classpathentry kind="lib" path="vendor/jmock-2.5.1.jar"/>
+	<classpathentry kind="lib" path="vendor/jmock-junit4-2.5.1.jar"/>
+	<classpathentry kind="lib" path="vendor/junit-4.8.1.jar"/>
+	<classpathentry kind="lib" path="vendor/smack.jar"/>
+	<classpathentry kind="lib" path="vendor/smackx.jar"/>
+	<classpathentry kind="lib" path="vendor/tools.jar"/>
+	<classpathentry kind="lib" path="vendor/windowlicker-core-DEV-src.jar"/>
+	<classpathentry kind="lib" path="vendor/windowlicker-core-DEV.jar"/>
+	<classpathentry kind="lib" path="vendor/windowlicker-swing-DEV-src.jar"/>
+	<classpathentry kind="lib" path="vendor/windowlicker-swing-DEV.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
